10/08/2020: IPED-3.18.3
News:
#81 Optimize image thumb generation up to 3x (Luis Nassif & Wladimir Leite)
#129 Nudity detection for videos (Wladimir Leite)
#177 Parser for Telegram/Vidogram (disabled for UFDR for now - João Hauck & Luis Nassif)
#221 Support ProjectVIC hashset format (Luis Nassif)
#231 Decode WhatsApp stickers in messages (João Hauck)
#230 Update java-dbx plugin to 1.1-p4 (Wladimir Leite)
#250 Do not change item size based on UFDR info, possibly misleading (Luis Nassif)
#252 Verify if the hashes of missing WhatsApp attachments are in the LED CSAM database (João Hauck)
#255 New config option to allow skipping input folders by regex for triage scenarios (Luis Nassif)
#259 Append hash suffix to name of exported zip file if GUI is in triage mode (Luis Nassif)
#263 Using variable time-out when generating thumbs according to image size (Luis Nassif)
#264 Change PSD and EMF images to be rendered by ImageViewer (Luis Nassif)
#269 Identify if Ufed or Skype chat attachments are in LED CSAM database (Luis Nassif)
#271 Ask before external opening executable files (Luis Nassif)
#274 Change default numImageReaders param to 1/4 of logical cpu cores (Luis Nassif & Wladimir Leite)
#275 Upgrade DIE nudity detection model to 20200916 (Wladimir Leite)
#276 Description about the meaning of red lines in P2P history reports (Luis Nassif)
Fixes:
#20 Temporary sqlite file leak (Luis Nassif)
#213 Phones incorrectly decoded from email addresses and user accounts (Luis Nassif)
#223 Aborting error when indexing to ElasticSearch (Luis Nassif)
#224 Possible division by zero in HexViewerPlus searching progress bar (Guilherme Guimarães)
#225 Items exported to indexed reports not opened by GUI viewers when enableHtmlReport = false (Luis Nassif)
#226 Error creating reports from "blind" cases or from other reports when enableHtmlReport = false (Luis Nassif)
#229 Rare InvalidPathException when deleting temp processing directory (Luis Nassif)