@@ -90,7 +90,6 @@
         <parser class="dpf.sp.gpinf.indexer.parsers.RegistryParser"></parser>
         <parser class="dpf.sp.gpinf.indexer.parsers.IndexDatParser"></parser>
         <parser class="dpf.sp.gpinf.indexer.parsers.PackageParser"></parser>	
-        <parser class="dpf.sp.gpinf.indexer.parsers.RARParser"></parser>
         <parser class="dpf.sp.gpinf.indexer.parsers.SevenZipParser"></parser>
         <parser class="dpf.sp.gpinf.indexer.parsers.XMLParser"></parser>
         <parser class="dpf.sp.gpinf.indexer.parsers.RFC822Parser"></parser>
